# wgpu-macros

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: integration_test.rs  vertex_layout.rs
